objects/Location/Location.object-meta.xml
<CustomObject>
	<historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>2</archiveRetentionYears>
        <description>HIPAA Audit Log Retention Location</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>