objects/Location/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>