objects/Location/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>