objects/Location/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
</CustomField>